Shift-Reporter Link fix 1

--- a/styles.scss
+++ b/styles.scss
@@ -784,7 +784,7 @@ span.flickering-3 {
 
 
 // Contact form
-#contact{
+form{
 #contact input[type="text"],
 #contact input[type="email"],
 #contact input[type="tel"],
